--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,36 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.9
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==36.0.1
-defusedxml==0.7.1
-Django==4.0
-django-colorfield==0.5.0
-django-email-users==1.1.0
-django-filter==21.1
-django-templated-mail==1.1.1
-djangorestframework==3.13.1
-djangorestframework-simplejwt==4.8.0
+atomicwrites==1.4.0
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+Django==3.0.5
+django-colorfield
+django-filter==2.4.0
+djangorestframework==3.11.0
 djoser==2.1.0
-drf-extra-fields==3.2.1
-idna==3.3
-itypes==1.2.0
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-oauthlib==3.1.1
-Pillow==8.4.0
-psycopg2==2.9.2
-pycparser==2.21
-PyJWT==2.3.0
-python3-openid==3.2.0
-pytils==0.3
-pytz==2021.3
-requests==2.26.0
-requests-oauthlib==1.3.0
-six==1.16.0
-social-auth-app-django==4.0.0
-social-auth-core==4.1.0
-sqlparse==0.4.2
-tzdata==2021.5
-uritemplate==4.1.1
-urllib3==1.26.7
+drf-extra-fields==3.1.1
+idna==2.10
+importlib-metadata==4.3.1
+iniconfig==1.1.1
+packaging==20.9
+pep517==0.10.0
+Pillow
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-django==4.3.0
+pytils
+requests==2.25.1
+sqlparse==0.3.1
+toml==0.10.2
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+zipp==3.4.1
+asgiref==3.2.10
+djangorestframework-simplejwt==4.3.0
+gunicorn==20.0.4
+psycopg2-binary==2.9.1
+PyJWT==1.7.1
+pytz==2020.1
