--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
-services:
 
+services:
   db:
     image: postgres:12.4
     restart: always
@@ -10,7 +10,7 @@ services:
       - ./.env
 
   web:
-    image: imersir/foodgram-project-react:latest
+    image: imersir/foodgram-web
     restart: always
     volumes:
       - static_value:/code/static/
@@ -21,7 +21,7 @@ services:
       - ./.env
 
   frontend:
-    image: imersir/foodgram-project-react-frontend:latest
+    image: imersir/foodgram-frontend
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -30,7 +30,7 @@ services:
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
@@ -38,10 +38,10 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    restart: always
     depends_on:
       - web
       - frontend
-
 volumes:
   postgres_data:
   static_value:
