--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,15 +1,15 @@
 server {
+    listen 80;
+    server_name 178.154.201.89 127.0.0.1 localhost;
     server_tokens off;
     ssl_reject_handshake on;
-    listen 80;
-    server_name 127.0.0.1;
 
     location /media/ {
         root /var/html/;
     }
 
     location /static/admin/ {
-        root /var/html/static/admin/;
+        root /var/html/;
     }
 
     location /api/docs/ {
@@ -40,5 +40,5 @@ server {
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
-      }
+      } 
 }
